# py-prj-template

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.cursor/rules/: Best-Python-Practice.mdc
tests/: test_smoke.py
